[gd_scene load_steps=5 format=3 uid="uid://bxxjivrae483y"]

[ext_resource type="Script" uid="uid://dg4rrvoxqarsb" path="res://scenes/final game scene diff approach (not working)/scripts/CircuitGame.gd" id="1_n7dm6"]
[ext_resource type="Texture2D" uid="uid://0nigwtgdp7j5" path="res://assets/sprites/Components/Battery/Battery.png" id="2_y3gex"]
[ext_resource type="Texture2D" uid="uid://d1yro8c6a1rlv" path="res://assets/sprites/Components/LED/REDLED onz.png" id="3_agud6"]
[ext_resource type="Texture2D" uid="uid://bkwin6xm7bkq1" path="res://assets/sprites/Components/Resistorz horizontal.png" id="4_15ah1"]

[node name="CircuitGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n7dm6")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1108.0
offset_bottom = 609.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainLayout" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="ComponentsPanel" type="Control" parent="MainContainer/MainLayout"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MainLayout/ComponentsPanel"]
layout_mode = 2
anchor_left = -0.01
anchor_top = -0.014
anchor_right = -0.01
anchor_bottom = -0.014
offset_left = 63.24
offset_top = 30.806
offset_right = 179.24
offset_bottom = 53.806
text = "Components"

[node name="BatteryButton" type="TextureButton" parent="MainContainer/MainLayout/ComponentsPanel"]
layout_mode = 2
offset_left = 42.0
offset_top = 67.0
offset_right = 158.0
offset_bottom = 183.0
texture_normal = ExtResource("2_y3gex")
ignore_texture_size = true
stretch_mode = 4

[node name="BulbButton" type="TextureButton" parent="MainContainer/MainLayout/ComponentsPanel"]
layout_mode = 2
offset_left = 84.0
offset_top = 253.0
offset_right = 161.0
offset_bottom = 354.0
size_flags_vertical = 3
texture_normal = ExtResource("3_agud6")
ignore_texture_size = true
stretch_mode = 5

[node name="ResistorButton" type="TextureButton" parent="MainContainer/MainLayout/ComponentsPanel"]
layout_mode = 2
offset_left = 39.0
offset_top = 414.0
offset_right = 208.0
offset_bottom = 500.0
texture_normal = ExtResource("4_15ah1")
ignore_texture_size = true
stretch_mode = 4

[node name="Canvas" type="Control" parent="MainContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="MainContainer/MainLayout/Canvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPanel" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 11.0
offset_top = 575.0
offset_right = 1138.0
offset_bottom = 606.0

[node name="ClearButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
text = "Clear Button"

[node name="StartButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
text = "Start Button"

[node name="StopButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
text = "Stop Button"

[connection signal="pressed" from="MainContainer/MainLayout/ComponentsPanel/BatteryButton" to="." method="_on_battery_button_pressed"]
[connection signal="pressed" from="MainContainer/MainLayout/ComponentsPanel/BulbButton" to="." method="_on_bulb_button_pressed"]
[connection signal="pressed" from="MainContainer/MainLayout/ComponentsPanel/ResistorButton" to="." method="_on_resistor_button_pressed"]
[connection signal="pressed" from="ButtonPanel/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="ButtonPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonPanel/StopButton" to="." method="_on_stop_button_pressed"]
